<resources>
    <string name="app_name">TMDB Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="title_adult">Adult : </string>
    <string name="title_media_type">Media Type : </string>
    <string name="title_release_date">Release Date : </string>
    <string name="title_popularity">Popularity : </string>
    <string name="title_overview">Overview : </string>
    <string name="title_original_language">Original Language : </string>
</resources>